<resources>
    <string name="app_name">homework11052021</string>
    <string name="profile_info">Profile Info</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
</resources>